Changelog for Poi
=================


2.0a2 (unreleased)
------------------

- Clean up type definitions (mostly: do not try to hide the
  properties/metadata tab that already is no longer there).
  [maurits]


2.0a1 (2010-02-27)
------------------

- When a response contains an attachment, add info about this to the
  e-mail.  Fixes http://plone.org/products/poi/issues/238
  [maurits]

- Depend on collective.watcherlist >= 0.2 for sending the resolved
  email only to the initial poster.
  [maurits]

- When deleting a response, do not remove it, but set it to None.
  This avoid problems when one user is editing a response and another
  user is removing it.
  [maurits]

- Polish translation
  [sargo]
  
- Compatibility with Chameleon
  [sargo]
 
- Minor fixes for i18n support
  [sargo]

- PoiIssue: there is no reason why contactEmail is mandatory
  [ajung]

- Added upgrade step to remove the local Manager role from all tracker
  managers and instead give them the TrackerManager role.
  [maurits]

- Define our permissions in zcml and configure them in rolemap.xml.
  [maurits]

- Added TrackerManager role.  Give this role to users mentioned in the
  managers field of a tracker, instead of the more powerful Manager
  role.
  [maurits]

- Removed ``skins/Poi/poi_issue_quicksearch.py`` in favour of our new
  ``@@poi_issue_quicksearch`` view.
  [maurits]

- Removed ``skins/Poi/toggleWatchingIssue.py`` in favour of our new
  ``@@toggle_watching`` view.
  [maurits]

- Removed ``skins/Poi/poi_niceName.py`` in favour of the new
  ``@@pas_member`` view from PlonePAS.
  [maurits]

- Removed ``skins/Poi/poi_issue_post.cpy`` and use an event handler on
  IObjectInitializedEvent of an issue instead.  Added upgrade step to
  remove the now unneeded form controller action for this, as it would
  otherwise give: ValueError: Unable to find poi_issue_post.
  [maurits]

- Moved fully to GenericSetup.
  [maurits]

- Added minimum versions for AddRemoveWidget and DataGridField in