@@ -5,6 +5,12 @@ Changelog for Poi
 2.0a2 (unreleased)
 ------------------
 
+- Do not completely remove the title field in the PSC tracker, but
+  only make it invisible while editing.  This makes sure that
+  folder_contents does not throw an error trying to find the title
+  field.
+  [maurits]
+
 - Clean up type definitions (mostly: do not try to hide the
   properties/metadata tab that already is no longer there).
   [maurits]
